--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Homework 10</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
+  <h1 class="title">Library of cat breeds</h1>
   <select class="breed-select"></select>
-  <p class="loader">Loading data, please wait...</p>
-  <p class="error">Oops! Something went wrong! Try reloading the page!</p>
-  <div class="cat-info"></div>
+  <p class="loader hidden"></p>
+  <p class="error hidden">Oops! Something went wrong! Try reloading the page!</p>
+  <div class="cat-info hidden"></div>
 
   <script src="/src/js/index.js" type="module"></script>
 </body>
