--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1 class="title">Library of cat breeds</h1>
-  <select class="breed-select"></select>
+  <select class="breed-select hidden"></select>
   <p class="loader hidden"></p>
   <p class="error hidden">Oops! Something went wrong! Try reloading the page!</p>
   <div class="cat-info hidden"></div>
